# Dexora

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_stages.sh  s1_pretrain.sh  s2a_analyze_jerk.sh  s2b_replay.sh  s2c_compute_logpi.sh  s2c_train_scoring.sh  s3_post_train.sh
configs/: base.yaml  base_400m.yaml  dataset_control_freq.json  dataset_stat.json  finetune_datasets.json  finetune_sample_weights.json  scoring.yaml  state_vec.py
configs/cross_embodiment/: README.md  ec1_franka.yaml  ec2_aloha.yaml  ec3_g1_inspire.yaml
data/: bson_vla_dataset.py  bson_vla_dataset_new.py  bson_vla_dataset_with_logpi.py  lerobot_vla_dataset.py  lerobot_vla_dataset_with_logpi.py
dataprocess/: README.md  airbot.py  airbot_config.py  airbot_lerobot.py
dataprocess/code/aloha/: aloha_config.py  aloha_trans.py
dataprocess/code/realman/: readme  realman_config.py  realman_trans.py
dataprocess/lerobot_split_merge_prcessor-main/: README.md  lerobot_dataset_lib.py  split_merge_dataset.py
deploy/: README.md  dexora_inference_zmq.py  dexora_policy.py  inference.sh  mmk_forwarder.py  mmk_xhand_config.yaml  xhand_forwarder.py
deploy/mmk2_kdl_py-0.1.4/: LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
deploy/mmk2_kdl_py-0.1.4/src/mmk2_kdl_py/: arm_kdl.py
deploy/mmk2_kdl_py-0.1.4/tests/: test_arm_kdl.py  test_mmk2_kdl.py
models/: rdt_runner.py  sample_weighting.py  scoring_model.py
new_lerobot_stats/: README.md
scripts/: analyze_episode_quality.py  compute_logpi.py  encode_lang.py  eval_action_curves.py  eval_smoothness.py  replay_validate.py  run_eval_example.sh
teleop/: .gitignore  README.md  requirements.txt
teleop/camera_tools/: camera_test.py  tools_camera.py  usb_cameras.py  v4.py
teleop/data_tools/: bson_to_json_converter.py  swap_action_observation_bson.py  validate_data_consistency.py
teleop/docs/: ARCHITECTURE.md  validation_script_guide.md  验证脚本使用说明.md
teleop/imitate_all/: 99-camera-symlinks.rules  camera_mapping_guide.md  install_camera_symlinks.sh  mmk_replay.py  mmk_replay_lerobot.py  record_4_rgb_cam.py  test_camera_mapping.sh  相机映射使用说明.md
teleop/imitate_all/configurations/basic_configs/example/robot/airbots/mmk/: airbot_com_mmk_demonstration_no_eef_bson.yaml
teleop/imitate_all/robots/airbots/airbot_mmk/: airbot_com_mmk2_bson.py
teleop/imitate_all/scripts/: fix_can.py
teleop/scripts/: record.py  record_delete.py  record_intrpt.py  replay.py  replay_lerobot.py  replay_only_robot.py
teleop/teleop_pkg/: SECRETS.md  auth_info.example.json  config.yaml  config_without_xhand.yaml  control_from_bson.py  env.yaml  receive_from_vision_pro.py  receive_from_vision_pro_timestemp.py  requirements_aarch64.txt  requirements_x86_64.txt  sync_helper.py
teleop/video_tools/: video.py  video_grid_merge.py  video_review_generator.py  video_rotate.py
tests/: __init__.py  conftest.py  test_cross_embodiment_configs.py  test_pu_loss.py  test_replay_validate.py  test_sample_weighting.py  test_smoothness_eval.py  test_weighted_mse_loss.py
train/: dataset.py  main.py  main_posttrain.py  main_scoring.py  train.py  train_posttrain.py  train_scoring.py
