[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "dexora"
version = "0.1.0"
description = "Dexora: Open-source VLA for High-DoF Bimanual Dexterity (ICRA 2026)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "The Dexora Authors", email = "dev@dexoravla.github.io" },
]
keywords = [
    "vision-language-action",
    "imitation-learning",
    "dexterous-manipulation",
    "bimanual-manipulation",
    "diffusion-transformer",
    "robot-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # --- Core training / optimization ---
    "packaging>=24.0",
    "wandb>=0.17.0",
    # accelerate 1.x changed the launcher CLI / DDP semantics; we still rely on
    # the 0.34.x behaviour.
    "accelerate>=0.30.0,<1.0",
    # diffusers 0.32 reorganized the schedulers; pin to the verified range.
    "diffusers>=0.27.0,<0.32",
    "timm>=1.0.0",
    # transformers 5.x dropped several internal helpers (e.g. ``is_offline_mode``)
    # that the 4.x line still imports from huggingface_hub; pinning to the 4.4x
    # range keeps us aligned with the encoders + training stack we ship.
    "transformers>=4.41.0,<5.0",
    # huggingface_hub 0.26 removed ``is_offline_mode`` and a few other helpers
    # that transformers 4.x still imports; keep us on the last 0.25.x line.
    "huggingface-hub>=0.24.0,<0.26",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.0",

    # --- Dataset I/O ---
    # LeRobot v3.0+ broke backward compatibility with the v2.1 dataset layout
    # that ``Dexora_Real-World_Dataset`` ships in. Pin to 0.3.x.
    "lerobot>=0.3,<0.4",
    "av",                 # PyAV video decode for LeRobot videos
    "h5py>=3.11.0",       # legacy hdf5/bson preprocess paths

    # --- Image / numeric ---
    "opencv-python>=4.9.0",
    "imgaug>=0.4.0",      # last 0.x release; requires numpy<2.0
    # imgaug uses ``np.sctypes`` which was removed in numpy 2.0; cap here.
    "numpy<2.0",
    "Pillow>=10.0",
    "matplotlib>=3.7",

    # --- General utils ---
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pymongo",            # only required for the legacy BSON loader
    # --- Real-robot deployment (deploy/) ---
    "pyzmq>=25.0",        # mmk_forwarder / xhand_forwarder / dexora_inference_zmq
]

[project.optional-dependencies]
# CUDA / DeepSpeed users may want to pin separately. Stage-1/3 launch scripts
# pass ``--deepspeed=./configs/zero2.json`` only when the extra is installed.
deepspeed = ["deepspeed==0.14.2"]

# Anything required only for development / CI
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5.0",
    "black>=24.4",
    "pre-commit>=3.7",
    "build>=1.2",
]

[project.urls]
Homepage = "https://dexoravla.github.io"
Repository = "https://github.com/Augety7777/Dexora-VLA"
Issues = "https://github.com/Augety7777/Dexora-VLA/issues"
Paper = "https://dexoravla.github.io"

[project.scripts]
# Console entry points installed by ``pip install -e .``. Mirror the
# ``python -m train.main(_scoring|_posttrain)`` invocations used in the
# shell launchers (``s1_pretrain.sh``, ``s2c_train_scoring.sh``,
# ``s3_post_train.sh``).
dexora-train          = "train.main:main"
dexora-train-scoring  = "train.main_scoring:main"
dexora-posttrain      = "train.main_posttrain:main"

# ---------------------------------------------------------------------------
# Setuptools: this is a research repo, not a clean library. We install only
# the Python packages we actually maintain, leaving scripts as top-level.
# ---------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# ``configs*`` is included so ``from configs.state_vec import ...`` works after
# ``pip install -e .`` (legacy data loaders under ``data/`` still import it).
include = ["models*", "train*", "data*", "scripts*", "configs*", "tools*"]
exclude = [
    "lerobot*", "dataprocess*", "deploy*", "ref_*", "reference*",
    "tests*", "assets*", "checkpoints*", "outs*",
]

# ---------------------------------------------------------------------------
# Ruff: lint + import sorting + simple formatting checks
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    "lerobot",
    "dataprocess",
    "ref_collect_hand",
    "ref_collect_mmk",
    "ref_replay",
    "_ref_collet",
    "reference",
    "deploy",
    "data/preprocess_scripts",  # third-party preprocessing forks
    "*/__pycache__",
    "*.ipynb",
]

[tool.ruff.lint]
# Stay deliberately small at first; this is a research repo with lots of
# legacy code we do not want to gate the CI on. Expand once the dust settles.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # long lines (let black/ruff format handle it)
    "B008",   # do not perform function calls in argument defaults (common in HF code)
    "E402",   # module-level import not at top (sys.path inserts before imports)
    "B905",   # zip() without strict=
    "E741",   # ambiguous variable name (l, I, O) - common in math code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401", "B011"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["models", "train", "data", "scripts", "tools"]
combine-as-imports = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 110
target-version = ["py310"]
extend-exclude = """
/(
    lerobot
  | dataprocess
  | ref_collect_hand
  | ref_collect_mmk
  | ref_replay
  | _ref_collet
  | reference
  | deploy
  | data/preprocess_scripts
)/
"""

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--showlocals",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that need a GPU",
]

# ---------------------------------------------------------------------------
# Coverage (used by pytest-cov)
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["models", "train", "scripts", "tools"]
omit = [
    "*/lerobot/*",
    "*/dataprocess/*",
    "*/reference/*",
    "*/ref_*/*",
    "*/_ref_collet/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
